--- a/public/css/style.css
+++ b/public/css/style.css
@@ -288,7 +288,7 @@ iframe.code {
 }
 
 .land-lin p {
-	@apply text-base font-medium text-[rgba(15,15,15,0.7)] pt-[7px] lg:max-w-[400px] md:max-w-[325px] mt-0;
+	@apply text-base font-medium text-[rgba(15,15,15,0.7)] pt-[7px] md:mr-24 mr-0 mt-0;
 	margin-bottom: 0 !important;
 	padding-right: 0 !important;
 }
