--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1251,8 +1251,7 @@ section {
   margin-top: 1.5rem;
   width: 100%;
   border-radius: 24px;
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 216 89 / var(--tw-bg-opacity));
+  background-image: linear-gradient(to left, #00c9ff, #92fe9d);
 }
 
 @media (min-width: 768px) {
