--- a/public/css/style.css
+++ b/public/css/style.css
@@ -203,7 +203,7 @@ section {
 }
 
 .influ-vlog {
-	@apply lg:text-[30px] md:text-[20px] text-[30px] rounded-[50px] pr-2.5 md:pl-[32px] pl-5 cursor-pointer font-bold text-[#1a61e9];
+	@apply lg:text-[30px] md:text-[20px] text-[30px] rounded-[50px] pr-2.5 md:pl-[32px] pl-5 cursor-pointer font-bold text-[#1a61e9] md:py-5 py-0;
 }
 
 .infludrop-btn {
@@ -900,7 +900,7 @@ iframe.code {
 /* Smooth scroll  */
 
 .mobile-vloger {
-	@apply md:hidden block md:h-full h-screen;
+	@apply md:hidden block md:h-full h-screen bg-regal-vlog;
 }
 
 .row1 {
