--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1135,6 +1135,8 @@ section {
 .influ-vlog {
   cursor: pointer;
   border-radius: 50px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   padding-right: 0.625rem;
   padding-left: 1.25rem;
   font-size: 30px;
@@ -1145,6 +1147,8 @@ section {
 
 @media (min-width: 768px) {
   .influ-vlog {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
     padding-left: 32px;
     font-size: 20px;
   }
@@ -2846,6 +2850,7 @@ iframe.code {
 .mobile-vloger {
   display: block;
   height: 100vh;
+  background-image: linear-gradient(to left, #f4d03f, #16a085);
 }
 
 @media (min-width: 768px) {
