--- a/public/css/style.css
+++ b/public/css/style.css
@@ -272,7 +272,7 @@ iframe.code {
 }
 
 .land-vloger iframe {
-	@apply absolute z-10;
+	@apply relative z-10;
 }
 
 .test-vloger {
@@ -801,11 +801,11 @@ iframe.code {
 	-moz-animation-name: scale;
 	-o-animation-name: scale;
 	-ms-animation-name: scale;
-	animation-duration: 4s;
-	-webkit-animation-duration: 4s;
-	-moz-animation-duration: 4s;
-	-ms-animation-duration: 4s;
-	-o-animation-duration: 4s;
+	animation-duration: 3s;
+	-webkit-animation-duration: 3s;
+	-moz-animation-duration: 3s;
+	-ms-animation-duration: 3s;
+	-o-animation-duration: 3s;
 	animation-fill-mode: both;
 }
 
@@ -954,4 +954,107 @@ iframe.code {
 #text-section-2,
 #text-section-3 {
 	@apply mt-[44px];
+}
+
+/* nfjsobnjosobsjn0 */
+.threshold {
+	position: sticky;
+	width: 100%;
+	height: 1px;
+	background-color: red;
+	z-index: 9999999999;
+}
+.threshold--top {
+	top: 50%;
+}
+
+.text {
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	margin: 0 auto;
+}
+.text p {
+	width: 40%;
+}
+
+.image {
+	opacity: 0;
+	transition: all 0.5s ease;
+}
+.image.active {
+	opacity: 1;
+}
+
+.locker {
+	margin-top: 100px;
+	outline: 1px solid #cdcdcd;
+	outline-offset: -1px;
+	position: relative;
+	display: grid;
+	grid-template-columns:
+		[full-start] minmax(0.1rem, 1fr) [center-start] repeat(
+			12,
+			[col-start] minmax(min-content, 8rem) [col-end]
+		)
+		[center-end] minmax(4.2rem, 1fr) [full-end];
+}
+.locker__image {
+	width: 660px;
+	position: relative;
+	grid-column: col-start 2 / col-end 6;
+}
+.locker__image img {
+	width: auto;
+	position: absolute;
+	transition: all 1s ease;
+}
+.locker__container {
+	position: sticky;
+	position: -webkit-sticky;
+	top: 0;
+	height: 100vh;
+	width: 100%;
+	display: flex;
+	flex-direction: column-reverse;
+	justify-content: center;
+}
+.locker__content {
+	grid-column: col-start 8 / center-end;
+}
+.locker__section {
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	border-top: 1px solid #cdcdcd;
+}
+.locker__section:first-child {
+	border: none;
+}
+.locker__section p {
+	width: 70%;
+}
+
+#message {
+	position: fixed;
+	top: 20px;
+	left: 20px;
+	background-color: white;
+	height: auto;
+	padding: 10px 20px;
+	z-index: 900;
+}
+.vloger-activeimg {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: 999;
+	width: 382px;
+	margin: auto;
+	margin-top: 60px;
 }
