--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1083,6 +1083,7 @@ section {
   align-items: baseline;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  padding-bottom: 0.625rem;
 }
 
 @media (min-width: 768px) {
@@ -1227,6 +1228,8 @@ section {
   position: static;
   top: 0px;
   margin-top: 0.625rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   padding-right: 0px;
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1342,6 +1345,7 @@ iframe.code {
 .land-vloger iframe {
   position: relative;
   z-index: 10;
+  border-radius: 40px;
 }
 
 .test-vloger {
@@ -1388,7 +1392,7 @@ iframe.code {
   }
 }
 
-.land-lin span {
+.locker__section h3 {
   font-size: 40px;
   font-weight: 700;
   --tw-text-opacity: 1;
@@ -1396,18 +1400,18 @@ iframe.code {
 }
 
 @media (min-width: 768px) {
-  .land-lin span {
+  .locker__section h3 {
     font-size: 30px;
   }
 }
 
 @media (min-width: 1024px) {
-  .land-lin span {
+  .locker__section h3 {
     font-size: 40px;
   }
 }
 
-.land-lin p {
+.locker__section p {
   margin-right: 0px;
   margin-top: 0px;
   padding-top: 7px;
@@ -1418,12 +1422,12 @@ iframe.code {
 }
 
 @media (min-width: 768px) {
-  .land-lin p {
+  .locker__section p {
     margin-right: 6rem;
   }
 }
 
-.land-lin p {
+.locker__section p {
   margin-bottom: 0 !important;
   padding-right: 0 !important;
 }
@@ -3013,29 +3017,26 @@ iframe.code {
 }
 
 .locker {
-  margin-top: 100px;
+  margin-top: 73px;
+  margin-left: 100px;
+  margin-right: 100px;
   /* outline: 1px solid #cdcdcd; */
   outline-offset: -1px;
   position: relative;
-  display: grid;
-  grid-template-columns:
-		[full-start] minmax(0.1rem, 1fr) [center-start] repeat(
-			12,
-			[col-start] minmax(-webkit-min-content, 8rem) [col-end]
-		)
-		[center-end] minmax(4.2rem, 1fr) [full-end];
-  grid-template-columns:
+  display: flex;
+  flex-direction: row-reverse;
+  /* grid-template-columns:
 		[full-start] minmax(0.1rem, 1fr) [center-start] repeat(
 			12,
 			[col-start] minmax(min-content, 8rem) [col-end]
 		)
-		[center-end] minmax(4.2rem, 1fr) [full-end];
+		[center-end] minmax(4.2rem, 1fr) [full-end]; */
 }
 
 .locker__image {
-  width: 660px;
+  width: 100%;
   position: relative;
-  grid-column: col-start 2 / col-end 6;
+  /* grid-column: col-start 2 / col-end 6; */
 }
 
 .locker__image img {
@@ -3056,7 +3057,8 @@ iframe.code {
 }
 
 .locker__content {
-  grid-column: col-start 8 / center-end;
+  width: 100%;
+  /* grid-column: col-start 8 / center-end; */
 }
 
 .locker__section {
@@ -3071,9 +3073,9 @@ iframe.code {
   border: none;
 }
 
-.locker__section p {
-  width: 70%;
-}
+/* .locker__section p {
+	width: 70%;
+} */
 
 #message {
   position: fixed;
